...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/shape_textbox"
        android:orientation="horizontal">

        <androidx.pdf.widget.SearchEditText
            android:id="@+id/searchQueryBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textDirection="locale"
            android:layout_weight="1"
            android:background="@null"
...
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSurfaceVariant"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/matchStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/query_box"
            android:layout_gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="8dp"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            android:textColor="?attr/colorOnSurfaceVariant" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/findPrevButton"
        android:layout_width="@dimen/find_in_file_button_size"
        android:layout_height="@dimen/find_in_file_button_size"
        android:background="@drawable/shape_oval"
        android:contentDescription="@string/previous_button_description"
        android:cropToPadding="true"
        android:padding="3dp"
        android:scaleType="centerInside"
        android:src="@drawable/keyboard_up"
        app:tint="?attr/colorOnSurfaceVariant" />

    <ImageButton
        android:id="@+id/findNextButton"
        android:layout_width="@dimen/find_in_file_button_size"
        android:layout_height="@dimen/find_in_file_button_size"
        android:background="@drawable/shape_oval"
        android:contentDescription="@string/next_button_description"
        android:cropToPadding="true"
        android:padding="3dp"
        android:scaleType="centerInside"
        android:src="@drawable/keyboard_down"
        app:tint="?attr/colorOnSurfaceVariant" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="@dimen/find_in_file_button_size"
        android:layout_height="@dimen/find_in_file_button_size"
        android:background="@drawable/shape_oval"
        android:contentDescription="@string/close_button_description"
        android:cropToPadding="true"
        android:padding="5dp"
...
